2005-02-09  Tom Tromey  <tromey@redhat.com>

	* decl.cc (build_class_type): Register itable, itable_syms,
	assertion_table, engine.
	* builtins.cc (map_utf8const): New method.
	* builtins.hh (tree_builtins::utf8map): New field.
	(tree_builtins::map_utf8const): Moved body to .cc file.

2005-02-09  Tom Tromey  <tromey@redhat.com>

	* hooks.hh (gcj_abi_version): Declare.
	* classobj.cc (create_class_instance): Rename 'next' field.
	and initialize it properly.
	* decl.cc (build_class_type): Renamed 'next' field.
	(gcj_abi_version): New global.
	(initialize_version): New function.
	(initialize_decls): Call it.

2005-02-09  Tom Tromey  <tromey@redhat.com>

	* classobj.cc (record_creator): Initialize new fields.
	(set_field): Updated.
	(create_class_instance): Initialize fields of Object.
	* treegen.cc (generate): Create a class_instance_creator.
	* classobj.hh (class_object_creator): Added 'record' argument.
	Uncommented body.
	(record_creator::field_class): New field.
	(record_creator::the_class): Likewise.

2005-02-09  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_array_ref): Lay out array class.

2005-02-09  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_for): Wrap body in a LOOP_EXPR.

	* abi.cc (build_method_call): Wrap object in NOP_EXPR before
	finding "vtable" field.

2005-02-08  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_for): Use LABEL_EXPRs as statements.  Set
	DECL_CONTEXT on labels.
	(visit_do): Set DECL_CONTEXT on labels.
	(visit_for_enhanced): Likewise.
	(visit_for): Likewise.
	(visit_label): Likewise.
	(visit_switch_block): Likewise.
	(visit_while): Likewise.

2005-02-08  Tom Tromey  <tromey@redhat.com>

	* tree.cc (build_array_reference): Correctly handle array's type.
	* builtins.cc (map_type): Don't set TYPE_NAME for array types.
	(lay_out_class): Correctly set type of "data" field of array
	types.

2005-02-08  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_method): Create BIND_EXPR with void type.
