@@ -1,3 +1,8 @@
+2005-02-09  Tom Tromey  <tromey@redhat.com>
+
+	* aot/mangle.cc (mangler): New constructor.
+	* aot/mangle.hh (mangler): Declare.
+
 2005-02-08  Tom Tromey  <tromey@redhat.com>
 
 	* model/method.cc (model_method): Updated.
